@@ -254,6 +254,9 @@ module Stella::Engine
       Stella.li3 "  Client-%s     QUIT   %s" % [client_id.shorter, msg]
     end
     
+    def update_fail_request client_id, msg
+      Stella.li3 "  Client-%s     FAILED   %s" % [client_id.shorter, msg]
+    end
     
     def update_repeat_request client_id, counter, total
       Stella.li3 "  Client-%s     REPEAT   %d of %d" % [client_id.shorter, counter, total]
