@@ -5,6 +5,9 @@ STELLA, CHANGES
 
 * CHANGE: sequential and rsequential resourcing is now global
   across all clients. 
+* ADDED: Assume HTTP response codes >= 400 are failed requests 
+  unless a response block is defined for that status in which 
+  case the block must return fail. 
 
 
 #### 0.7.1 (2009-10-21) ###############################
